--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ukize233/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ukize233/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780663.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/15e885f9761ed4f4_ttl7day37c_20200110-____-DJY_-320x200.jpg">【专访】台北议员苗博雅：中共是港台青年威胁（下）</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782697.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/15e88604530cb390_ttl7day4ea_20200110-____-DJY-___2-320x200.jpg">【专访】王定宇：反渗透法如何抵挡中共渗透（中）</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768058.md#1">习近平谈中共领导人更替 接班人制再引关注</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772655.md#1">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11770292.md#1">苏州十全街发生大面积塌陷 店铺已搬空</a><br>
@@ -30,18 +30,21 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782727.md#1">柯文哲批蓝打绿 矢言民众党将成第一大党</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782616.md#1">选前之夜 3位候选人全力催票</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781535.md#1">中国制车厢门质量不合格 纽约MTA换下300个</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782690.md#1">交大教授自掏腰包 援助百名学子返乡投票</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782578.md#1">台青年返乡列车募资 送3300人回家投票</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780663.md#1">【专访】台北议员苗博雅：中共是港台青年威胁（下）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782644.md#1">蔡英文大选前夜提醒选民“全世界都在看”</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782612.md#1">两代人对台湾未来的对话</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782575.md#1">民进党中市选前之夜 赖清德点天灯祈福</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782543.md#1">柯文哲：郭董有这种幕僚还需要敌人吗</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782521.md#1">台湾大选 大陆民众也关注</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781279.md#1">【翻墙必看】中南海官员透露中共高层秘密</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782519.md#1">台湾大选 美学者揭中共进行讯息战内幕</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782236.md#1">返乡潮首日大陆无防护 武汉火车站零防疫</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播中】决战2020 台湾总统选前之夜</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782117.md#1">“一众港铁员工”发公开信：与香港人同行</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781995.md#1">400公里1312元 大陆高速收天价过路费</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782176.md#1">受贿超1.2亿 中共质检总局前高官魏传忠受审</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782135.md#1">香港人在台北举标语 呼吁民众投票守护台湾</a><br>
@@ -85,11 +88,8 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777696.md#1">美专家：北京可能成为台湾选举大输家</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780211.md#1">前北约秘书长：台湾大选是中共资讯战演习场</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780032.md#1">刘鹤13日赴美签协议 环时叫嚷“不着急签”</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779685.md#1">退休一年 武汉公安局前副局长被调查</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779864.md#1">脱贫率超99.99%？江苏“脱贫神话”遭质疑</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ukize233/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778253.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/c3ed8329bce6a00029803af8c3258562-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778253.md#1">鲁商被合同诈骗 法院三次秘密判决维权无门</a><br>法律的制定是以公平正义为基础，用来 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778054.md#1">饮水工程强占地 河南五农场联名举报县政府</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11774971.md#1">四川八名法轮功学员遭冤判 法院欺瞒家人</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11776343.md#1">大陆留学生香港参加集会 公开声援港人抗争</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775580.md#1">蓬佩奥回应中联办换人 “北京应履行承诺”</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769986.md#1">【2019盘点】中共对法轮功学员残酷迫害</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779137.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/03/IMG_0103-1-1068x892-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779137.md#1">售价贵服务差 天津百年老店狗不理陷困境</a><br>天津百年老店狗不理包子近来因遭到消 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779313.md#1">中国主要城市写字楼空置率惊人 近乎鬼城</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778820.md#1">对美承诺或成空 传大陆再买10批巴西大豆</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778212.md#1">中信计划转让麦当劳中国22%股权</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777957.md#1">年关难过 大陆网络公司新一波裁员潮来临</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777929.md#1">大陆前100房企业绩增速跌80% 至个位数</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778360.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/019-11-2811.32-600x400-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778360.md#1">【翻墙必看】两神秘人对王立强发死亡威胁</a><br>大纪元每天为读者梳理翻墙必看的文章 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775005.md#1">分析：台大选如何影响日本国防和亚太安全</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779538.md#1">中联办主任骆惠宁与林郑会面后未见传媒</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779563.md#1">青海省公安厅前副厅长涉受贿等罪被起诉</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779418.md#1">中共文艺界多名官员被查 1人为女歌手</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779070.md#1">黑龙江前市委书记曾畏罪潜逃 逃跑路线曝光</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779091.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779091.md#1">北大医学部教授：武汉肺炎人传人可能性大</a><br>据大陆专家初步判定，武汉的不明原因 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778710.md#1">安徽长丰县重型货车和私家车相撞 致8死</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778417.md#1">新年第9日 北京房山发生3.2级地震</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778306.md#1">西藏暴雪湖南暴雨 大陆多地现雨雪天气</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778256.md#1">武汉肺炎为新型冠状病毒 跟此前发现的不同</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775361.md#1">港疑似武汉肺炎30宗 区议会促林郑赴汉视察</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778504.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/Baghdad_-_airport_and_green_zone-1-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778504.md#1">【拍案惊奇】危机未完全解除 美伊冲突内幕</a><br>一场迫在眉睫的战争，随时可能爆发。 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777700.md#1">印尼向争议海域派遣战机巡航 北京低调</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778497.md#1">汕头怀孕母牛三步一跪求生 网友买下放生</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778455.md#1">河南交通局副局长向司机要钱 视频曝光</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778525.md#1">每日三退声明精选（2020/01/08）</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778073.md#1">自曝为何生二胎不经老大同意 张歆艺逗乐网友</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777510.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/03/yangzi_meitu_1-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br>1月7日，陆媒“腾讯娱乐白皮书”公布 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11775957.md#1">西安高中生将老师杀害潜逃 已被抓获</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11773097.md#1">金球奖首位华裔影后 林家珍获喜剧最佳女主角</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11761587.md#1">红歌代替儿歌 大陆幼童也要表示效忠</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11765947.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1086048850-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br>前谷歌高管罗斯·拉吉尼斯（Ross LaJ ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769412.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/e269c8c8ced63b0e542a3e28dbbd17d0-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br>2019年岁末，无锡市二十多名非法强拆 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779813.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_JX0CF-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br>美国国会一份报告呼吁对侵犯人权行为 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778253.md#1">鲁商被合同诈骗 法院三次秘密判决维权无门</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778054.md#1">饮水工程强占地 河南五农场联名举报县政府</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11774971.md#1">四川八名法轮功学员遭冤判 法院欺瞒家人</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11776343.md#1">大陆留学生香港参加集会 公开声援港人抗争</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775580.md#1">蓬佩奥回应中联办换人 “北京应履行承诺”</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779864.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2003/09/309034826938-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779864.md#1">脱贫率超99.99%？江苏“脱贫神话”遭质疑</a><br>近日江苏政府声称年底脱贫率已经超过 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779137.md#1">售价贵服务差 天津百年老店狗不理陷困境</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779313.md#1">中国主要城市写字楼空置率惊人 近乎鬼城</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778820.md#1">对美承诺或成空 传大陆再买10批巴西大豆</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778212.md#1">中信计划转让麦当劳中国22%股权</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777957.md#1">年关难过 大陆网络公司新一波裁员潮来临</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779685.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/96bbf07e6ed5792133f073abf0d5b9b5-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779685.md#1">退休一年 武汉公安局前副局长被调查</a><br>中共湖北武汉市公安局前党委副书记、 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778360.md#1">【翻墙必看】两神秘人对王立强发死亡威胁</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775005.md#1">分析：台大选如何影响日本国防和亚太安全</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779538.md#1">中联办主任骆惠宁与林郑会面后未见传媒</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779563.md#1">青海省公安厅前副厅长涉受贿等罪被起诉</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779418.md#1">中共文艺界多名官员被查 1人为女歌手</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779091.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779091.md#1">北大医学部教授：武汉肺炎人传人可能性大</a><br>据大陆专家初步判定，武汉的不明原因 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778710.md#1">安徽长丰县重型货车和私家车相撞 致8死</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778417.md#1">新年第9日 北京房山发生3.2级地震</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778306.md#1">西藏暴雪湖南暴雨 大陆多地现雨雪天气</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778256.md#1">武汉肺炎为新型冠状病毒 跟此前发现的不同</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775361.md#1">港疑似武汉肺炎30宗 区议会促林郑赴汉视察</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778504.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/Baghdad_-_airport_and_green_zone-1-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778504.md#1">【拍案惊奇】危机未完全解除 美伊冲突内幕</a><br>一场迫在眉睫的战争，随时可能爆发。 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777700.md#1">印尼向争议海域派遣战机巡航 北京低调</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778497.md#1">汕头怀孕母牛三步一跪求生 网友买下放生</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778455.md#1">河南交通局副局长向司机要钱 视频曝光</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778525.md#1">每日三退声明精选（2020/01/08）</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778073.md#1">自曝为何生二胎不经老大同意 张歆艺逗乐网友</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777510.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/03/yangzi_meitu_1-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br>1月7日，陆媒“腾讯娱乐白皮书”公布 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11775957.md#1">西安高中生将老师杀害潜逃 已被抓获</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11773097.md#1">金球奖首位华裔影后 林家珍获喜剧最佳女主角</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/2/n11761587.md#1">红歌代替儿歌 大陆幼童也要表示效忠</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11765947.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1086048850-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br>前谷歌高管罗斯·拉吉尼斯（Ross LaJ ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769412.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/e269c8c8ced63b0e542a3e28dbbd17d0-150x120.jpg"></a><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br>2019年岁末，无锡市二十多名非法强拆 ...<br><br><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><br><p><a href="https://github.com/ukize233/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
